--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^0.13.4
   cached_network_image: ^3.2.0
   intl: ^0.17.0
+  get: ^4.6.1
+
   
 dev_dependencies:
   flutter_test:
